sampler/chain/projects/litiengine/selected.txt
/home/nima/Developer/AutoFixer/Evaluation/Projects/litiengine/src/de/gurkenlabs/litiengine/gui/screens/ScreenManager.java:48: error: [NullAway] (INDEX= 295) (Covered) initializer method does not guarantee @NonNull field currentScreen (line 36) is initialized along all control-flow paths (remember to check for exceptions or early returns).
  public ScreenManager() {
         ^
	(see http://t.uber.com/nullaway )
/home/nima/Developer/AutoFixer/Evaluation/Projects/litiengine/src/de/gurkenlabs/litiengine/entities/Entity.java:512: error: [NullAway] (INDEX= 34) (Covered) assigning @Nullable expression to @NonNull field
    this.environment = null;
                     ^
	(see http://t.uber.com/nullaway )
/home/nima/Developer/AutoFixer/Evaluation/Projects/litiengine/src/de/gurkenlabs/litiengine/resources/Maps.java:193: error: [NullAway] (INDEX= 415) (Covered) returning @Nullable expression from method with @NonNull return type
        return null;
        ^
	(see http://t.uber.com/nullaway )
/home/nima/Developer/AutoFixer/Evaluation/Projects/litiengine/src/de/gurkenlabs/litiengine/environment/tilemap/xml/BooleanIntegerAdapter.java:14: error: [NullAway] (INDEX= 213) (Covered) returning @Nullable expression from method with @NonNull return type
      return null;
      ^
	(see http://t.uber.com/nullaway )
/home/nima/Developer/AutoFixer/Evaluation/Projects/litiengine/src/de/gurkenlabs/litiengine/environment/tilemap/xml/Tileset.java:91: error: [NullAway] (INDEX= 124) (Covered) assigning @Nullable expression to @NonNull field
    Resources.images().addClearedListener(() -> this.spriteSheet = null);
                                                                 ^
	(see http://t.uber.com/nullaway )
